--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "statuses": [
-        "One", "Two", "Three"
+        "Cheap Members in bio", "Meyshie", "Owner of Cheap Members"
     ],
 
     "time": "5000"
