--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "statuses": [
-        "One", "Two", "Three"
+        "Members in bio", "Meyshie", "Owner of cheap members"
     ],
 
     "time": "5000"
