--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "statuses": [
-        "Members in bio", "Meyshie", "Owner of cheap members"
+        "Members in bio", "Meyshie", "Owner of cheap members", ".gg/farmmembers too"
     ],
 
     "time": "5000"
